Lock.pm: [BUGFIX] should have opened file for RW.
lintel-flock.in: [BUGFIX] should have been truncating filehandle,
   also want to have second seek next to the second print so it's clearer
   why it's there.

--- a/src/lintel-flock.in
+++ b/src/lintel-flock.in
@@ -97,16 +97,17 @@ sub background {
 
 	my $hostname = hostname();
 	seek($fh, 0, 0) or die "seek failed: $!";
+	truncate($fh, 0) or die "truncate failed: $!";
 	print $fh "locked for pid $callpid on $hostname\n"
 	    or die "print failed: $!";
-	seek($fh, 0, 0) or die "seek failed: $!";
 	while(1) {
 	    my $count = kill 0, $callpid;
 	    if ($count == 0) {
 		print STDERR "parent exited, exiting\n"
 		    if $verbose;
-		print $fh "unlocked\n"
-		    or die "print failed: $!";
+		seek($fh, 0, 0) or die "seek failed: $!";
+		truncate($fh, 0) or die "truncate failed: $!";
+		print $fh "unlocked\n" or die "print failed: $!";
 		exit(0);
 	    } else {
 		print STDERR "parent $callpid still there, waiting\n"
