deptool.in: Deptool used to keep track of whether or not it had done an install of a dependency within the same command, but that fails when the dependency is built in a separate command.  This commit changes that to get the time of the last install from its time stamp, and compare that to a project build time when deciding whether to install.
It is still possible that a project will be rebuilt although it didn't 
need to be by being listed after another project which it is not dependent
on but which happens to be newer.  The eventual solution to this is to
build a full graph of the dependencies and their install times, but this
is a quick fix to the missing build problem.

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -782,10 +782,14 @@ sub depBuildCheckOld {
         print "depbuild:  missing .deptool.build_stamp, build definitely out of date\n";
         return;
     }
-    if ($options->{did_install}) {
-        print "depbuild:  did an install in another directory, so we are out of date\n";
-        unlink(".deptool.build_stamp") or die "?";
-        return;
+    if ($options->{last_install}) {
+	my $ref_stat = stat(".deptool.build_stamp")
+	    or die "Unable to stat .deptool.build_stamp: $!";
+	if ($ref_stat->mtime() < $options->{last_install}) {
+	    print "depbuild:  did an install in another directory, so we are out of date\n";
+	    unlink(".deptool.build_stamp") or die "?";
+	    return;
+	}
     }
     my @old_files = depBuildFindOld($src);
     if (@old_files > 0) {
@@ -847,14 +851,21 @@ sub depBuildTest {
 }
 
 sub stampUpToDate {
-    my($which) = @_;
+    my($which, $options) = @_;
 
     return 0 unless -f ".deptool.${which}_stamp";
     my $build_stat = stat(".deptool.build_stamp")
         or die "Unable to stat .deptool.build_stamp: $!";
     my $which_stat = stat(".deptool.${which}_stamp")
         or die "Unable to stat .deptool.${which}_stamp: $!";
-    return $which_stat->mtime() > $build_stat->mtime();
+    if (defined $options) {
+        if (!defined $options->{last_install}
+	    || $which_stat->mtime() > $options->{last_install})
+	{
+	    $options->{last_install} = $which_stat->mtime();
+	} 
+    }
+    return ($which_stat->mtime() > $build_stat->mtime());
 }
 
 sub stamp {
@@ -875,12 +886,11 @@ sub stamp {
 sub depBuildInstall {
     my($build, $options) = @_;
 
-    if (stampUpToDate("install","build")) {
+    if (stampUpToDate("install",$options)) {
         print "depbuild: Install up to date in $build\n";
     } else {
         runCommand("make","install");
         stamp("install");
-        $options->{did_install} = 1;
     }
 }
 
