Fixed a bug in deptool where it didn't work if a project was dependent on itself, as is used in SimReal to force a Process mode build to happen first.

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -799,7 +799,10 @@ sub depBuildCheckOld {
 	    ($dep,$sub_build_type) = ($1,$2);
 	}
 
-        die "Undefined key $dep" if (!defined $options->{"lastbuild $dep"});
+        if (!defined $options->{"lastbuild $dep"}) {
+	    warn("No last build time for $dep from $options->{building}");
+	    next;
+	}
 	if ($ref_stat->mtime() < $options->{"lastbuild $dep"}) {
 	    print "depbuild:  did an install in another directory, so we are out of date\n";
 	    unlink(".deptool.build_stamp") or die "?";
