Added an implementation of the string-matching Boyer-Moore-Horspool algorithm to Lintel.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,6 +55,7 @@ SET(LIBLINTEL_SOURCES
 	StatsSeries.cpp
 	StatsSeriesGroup.cpp
 	StringUtil.cpp
+	BoyerMooreHorspool.cpp
 	${LIBLINTEL_THREAD_SOURCES}
 )
 
